--- a/pokedex/neodex/templates/index.html
+++ b/pokedex/neodex/templates/index.html
@@ -18,10 +18,15 @@
     <title>{% block title %}{% endblock %}</title>
     
 </head>
+<style>
+    body {
+        background-image:  url(https://images3.alphacoders.com/745/thumb-1920-745074.png);
+    }
+</style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="ListaPokemon/">lista</a>
+            <a class="navbar-brand" href="{% url 'ListaPokemon' %}">lista</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,7 +47,7 @@
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                            </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -52,7 +57,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-            </div>
+                </div>
         </div>
     </nav>
     {% block content %}
