--- a/pokedex/neodex/templates/index.html
+++ b/pokedex/neodex/templates/index.html
@@ -20,13 +20,13 @@
 </head>
 <style>
     body {
-        background-image:  url(https://images3.alphacoders.com/745/thumb-1920-745074.png);
+        background-color:aliceblue;
     }
 </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'ListaPokemon' %}">lista</a>
+            <a class="navbar-brand" href="{% url 'ListaPokemon' %}">lista</a>   
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
