--- a/pokedex/neodex/templates/formulario.html
+++ b/pokedex/neodex/templates/formulario.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 
+{% block title %}
+Formulario Registro Entrenadores
+{% endblock %}
+
 {% block content %}
 
         
