--- a/pokedex/neodex/templates/PokemonIndex.html
+++ b/pokedex/neodex/templates/PokemonIndex.html
@@ -32,7 +32,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-5">
-                        <span><p>Clasificacion </p></span>    
+                        <span><p>Clasificacion </p></span>
                     </div>
                     <div class="col-5">
                         <span><p>{{ detalle.Clasificacion }}</p></span>
@@ -47,6 +47,12 @@
                         <span><p> {{ detalle.Altura }}m </p></span>
                         <span><p> {{ detalle.Peso }}kg </p></span>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                        <span><p>Habilidades</p></span>
+                    </div>
+                    <div class="col-5">{{detalle.Habilidades}}</div>
                 </div>
                     
             </div>
